complete the smoke test
Signed-off-by: Ivan Porto Carrero <ivan@flanders.co.nz>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Install Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
       - name: Checkout code
         uses: "actions/checkout@v2"
       - name: Test
-        run: go test ./...
+        run: go test -race ./...
